--- a/style-rtl.css
+++ b/style-rtl.css
@@ -3791,6 +3791,14 @@ small {
 	background-image: url('data:image/svg+xml;utf8,%3Csvg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 26.458 26.458"%3E%3Cdefs%3E%3Cpath id="a" d="M-9.863 11.56h33.374v14.267H-9.863z"/%3E%3C/defs%3E%3Cpath d="M13.215 0A13.23 13.23 0 000 13.23a13.23 13.23 0 0013.23 13.228A13.23 13.23 0 0026.457 13.23 13.23 13.23 0 0013.23 0a13.23 13.23 0 00-.014 0zm-.032 1.323a11.906 11.906 0 01.046 0 11.906 11.906 0 0111.906 11.906A11.906 11.906 0 0113.23 25.135 11.906 11.906 0 011.323 13.23a11.906 11.906 0 0111.86-11.906z" fill="%238db3e2"/%3E%3Cpath d="M13.244 25.414c8.36-8.36 8.722-15.996 0-24.717m-.03 25.065c-8.36-8.36-8.721-15.996 0-24.717" fill="none" stroke="%238db3e2" stroke-width=".906"/%3E%3Cpath d="M22.199 3.71c-6.219 5.285-11.97 5.268-17.934 0m17.934 19.042c-6.219-5.285-11.97-5.269-17.934 0" fill="none" stroke="%238db3e2" stroke-width=".719"/%3E%3Cg fill="%238db3e2" stroke="%238db3e2" stroke-width=".672"%3E%3Cpath d="M13.168.336h.122v25.787h-.122z"/%3E%3Cpath d="M26.123 13.168v.122H.336v-.122z"/%3E%3C/g%3E%3Cpath fill="%238db3e2" d="M1.016 8.368h24.426v9.723H1.016z"/%3E%3Cpath fill="%230f1b29" d="M2.092 9.372h22.274v7.715H2.092z"/%3E%3Cg style="line-height:1.25;white-space:pre;shape-inside:url(%23a)"%3E%3Cpath d="M3.459 11.009h1.23l.662 3.06.668-3.06h1.056l.665 3.028.666-3.028h1.23l-1.043 4.44h-1.38l-.667-3.053-.664 3.053H4.5zm6.682 0h1.229l.664 3.06.666-3.06h1.057l.664 3.028.666-3.028h1.23l-1.042 4.44h-1.38l-.667-3.053-.665 3.053h-1.38zm6.68 0h1.231l.662 3.06.668-3.06h1.056l.665 3.028.666-3.028H23l-1.043 4.44h-1.38l-.667-3.053-.664 3.053h-1.381z" aria-label="www" font-weight="700" font-size="5.644" font-family="sans-serif" letter-spacing="0" word-spacing="0" fill="%238db3e2"/%3E%3C/g%3E%3C/svg%3E');
 }
 
+.articles-list .meta__item--has-icon .meta__term:first-of-type, .articles-list .meta__item--has-icon .meta__description:first-of-type {
+	padding-right: calc( 1.375rem + var(--apcom-spacing-xs));
+}
+
+.articles-list .meta__item--has-icon .meta__term:not(:first-of-type), .articles-list .meta__item--has-icon .meta__description:not(:first-of-type) {
+	padding-right: 0.125rem;
+}
+
 .more-link {
 	align-items: center;
 	background: var(--apcom-color-bg);
